# zpanel-sdk

./: .gitignore  Cargo.toml  README.md
docs/: DSO_EXTENSION_DEV.md
examples/example-extension/: Cargo.toml  build.ps1  example_extension.conf
examples/example-extension/src/: lib.rs
examples/minimal-handwritten/: Cargo.toml  README.md  c_extension.c
examples/minimal-handwritten/src/: lib.rs
src/: acl.rs  config.rs  error.rs  lib.rs  macros.rs  types.rs
zpanel-sdk-macros/: Cargo.toml
zpanel-sdk-macros/src/: lib.rs
