[workspace]
resolver = "2"
members = [
    ".",
    "zpanel-sdk-macros",
    "examples/example-extension",
    "examples/minimal-handwritten",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
libloading = "0.8"

[package]
name = "zpanel-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Zpanel Team"]
description = "Zpanel DSO 扩展 C ABI 规范 & Rust SDK — 任何语言都可以写扩展，Rust SDK 是便利工具"
license = "MIT"
repository = "https://github.com/hlshell/zpanel-sdk"
readme = "README.md"
keywords = ["zpanel", "dso", "extension", "plugin", "web-server"]
categories = ["development-tools"]

[lib]
name = "zpanel_sdk"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
libloading = { workspace = true }
zpanel-sdk-macros = { path = "zpanel-sdk-macros", version = "0.1.0" }
